@@ -1,3 +1,7 @@
+2002-11-23  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
+
+	* FREETYPEINCCMD and FREETYPELIBCMD
+
 2002-11-22  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
 	* Initial creation (from resurrected AM-LT merged into 20021122 MAIN HEAD)
